@@ -1,15 +1,17 @@
 import { uuid, pgTable, text, varchar, boolean } from "drizzle-orm/pg-core";
 
 export const usersTable = pgTable("users", {
-    id: uuid().primaryKey().defaultRandom(),
-    username: varchar({ length: 255 }).notNull(),
-    email: varchar({ length: 255 }).notNull().unique(),
-    password: varchar({ length: 255 }).notNull(),
-    verified: boolean().notNull(),
+  id: uuid().primaryKey().defaultRandom(),
+  username: varchar({ length: 255 }).notNull(),
+  email: varchar({ length: 255 }).notNull().unique(),
+  password: varchar({ length: 255 }).notNull(),
+  verified: boolean().notNull(),
 });
 
 export const sessionsTable = pgTable("sessions", {
-    id: uuid().primaryKey().defaultRandom(),
-    userId: uuid('user_id').notNull().references(() => usersTable.id),
-    token: text('token'),
+  id: uuid().primaryKey().defaultRandom(),
+  userId: uuid("user_id")
+    .notNull()
+    .references(() => usersTable.id),
+  code: text("code"),
 });
